--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -213,6 +213,13 @@
             android:layout_height="1dp"
             android:background="@color/login_view"></View>
 
+        <TextView
+            android:id="@+id/showip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="" />
+
         <Button
             android:id="@+id/info_exit"
             android:layout_width="match_parent"
