--- a/app/src/main/res/layout/contacts_dialog.xml
+++ b/app/src/main/res/layout/contacts_dialog.xml
@@ -57,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:textIsSelectable="true"
                 android:text="13155556666"
                 android:textSize="18sp" />
         </LinearLayout>
