--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -230,8 +230,8 @@
             android:id="@+id/showip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="" />
+            android:layout_marginLeft="10dp"
+            android:text="当前登录IP：" />
 
         <Button
             android:id="@+id/info_exit"
